--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,47 +1,17 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
-node_modules/
-
-# Expo
-.expo/
-dist/
-web-build/
-expo-env.d.ts
-
-# Native
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision
-
-# Metro
-.metro-health-check*
-
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
-
-# macOS
-.DS_Store
-*.pem
-
-# local env files
-.env*.local
-
-# typescript
-*.tsbuildinfo
-
-#backend 
+# NodeJS CLI ignores
 /NodeJS_CLI/node_modules/
 /NodeJS_CLI/.vscode/
 /NodeJS_CLI/.pytest_cache/
+
+# Python / Flask ignores
+/venv/
 /.vscode/
 /.pytest_cache/
-/data/  
-/venv/
+__pycache__/
 
+# PostgreSQL Docker database files
+/data/
+
+# Pipenv
 Pipfile
+Pipfile.lock
