--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # === Frontend (thani-dev) ===
 
 # Node dependencies
-thani-dev/node_modules/
+thani-dev\node_modules\
 
 # Expo build artifacts
-thani-dev/.expo/
-thani-dev/dist/
-thani-dev/web-build/
-thani-dev/expo-env.d.ts
+thani-dev\.expo\
+thani-dev\dist\
+thani-dev\web-build\
+thani-dev\expo-env.d.ts
 
 # Native mobile artifacts
 *.orig.*
@@ -18,7 +18,7 @@ thani-dev/expo-env.d.ts
 *.mobileprovision
 
 # Metro bundler health check
-thani-dev/.metro-health-check*
+thani-dev\.metro-health-check*
 
 # Debug logs
 npm-debug.*
@@ -35,22 +35,22 @@ yarn-error.*
 # TypeScript artifacts
 *.tsbuildinfo
 
-# === Backend (backend/) ===
+# === Backend (backend\) ===
 
-# NodeJS CLI (inside backend/NodeJS_CLI)
-backend/NodeJS_CLI/node_modules/
-backend/NodeJS_CLI/.vscode/
-backend/NodeJS_CLI/.pytest_cache/
+# NodeJS CLI (inside backend\NodeJS_CLI)
+backend\NodeJS_CLI\node_modules\
+backend\NodeJS_CLI\.vscode\
+backend\NodeJS_CLI\.pytest_cache\
 
-# Python / Flask ignores
-backend/venv/
-backend/.vscode/
-backend/.pytest_cache/
-backend/__pycache__/
+# Python \ Flask ignores
+backend\venv\
+backend\.vscode\
+backend\.pytest_cache\
+backend\__pycache__\
 
 # PostgreSQL Docker database files
-backend/data/
+backend\data\
 
 # Pipenv (Python environment)
-backend/Pipfile
-backend/Pipfile.lock
+backend\Pipfile
+backend\Pipfile.lock
