--- a/db_setup/requirements.txt
+++ b/db_setup/requirements.txt
@@ -1,11 +1,7 @@
-Flask>=2.0
-psycopg2-binary>=2.9
-pgvector==0.4.1
-requests
-flask-cors>=3.0
-ics
-icalendar
+SQLAlchemy
+psycopg2-binary
+pgvector
 openai
 python-dotenv
-pgvector
-werkzeug
+requests
+icalendar
